--- a/analysis/Passby_MANOVA_Analyses.Rmd
+++ b/analysis/Passby_MANOVA_Analyses.Rmd
@@ -123,10 +123,13 @@ Feq_summary <- LZFeq_l %>%
             'SD pavement temp' = sd(pavetemp))
 
 
+Feq_summary$Treatment <- sub("baseline_chipseal", "Baseline - Chip Seal", Feq_summary$Treatment)
 Feq_summary$Treatment <- sub("Type.II\\.", "Type II ", Feq_summary$Treatment)
 Feq_summary$Treatment <- sub("Type.III.", "Type III ", Feq_summary$Treatment)
 Feq_summary$Treatment <- sub("X1.4in.", "1/4 in ", Feq_summary$Treatment)
 Feq_summary$Treatment <- sub("X3.8in.", "3/8 in ", Feq_summary$Treatment)
+Feq_summary$Treatment <- sub("\\.", " ", Feq_summary$Treatment)
+
 
 kable(Feq_summary,
       caption = "Summary of passby data collected by year and treatment.",
@@ -144,7 +147,7 @@ LZFeq_l = filter(LZFeq_l, Year !="2019")
 Feq.man.macro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
                         X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
                         X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
-                    macro_treatment + pavetemp * speed + Year, data = LZFeq_l)
+                    macro_treatment + pavetemp * speed , data = LZFeq_l)
 
 
 Feq.man.micro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
@@ -153,21 +156,29 @@ Feq.man.micro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X31
                       treatment + pavetemp * speed, data = LZFeq_l)
 
 
+Feq.man.micro2 <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
+                        X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
+                        X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
+                      treatment + pavetemp * speed + treatment:speed, data = LZFeq_l)
+
 macro.coeff = coefficients(Feq.man.macro)
-micro.coeff = coefficients(Feq.man.micro)
+micro.coeff = coefficients(Feq.man.micro2)
 ```
 
-Using MANOVA, we see that there are strong effects of all the predictors on noise values across the frequencies. The first table is for overall effects of chip seal vs. microsurfacing, and the second table is for each of the four treatment levels.
+Using MANOVA, we see that there are strong effects of all the predictors on noise values across the frequencies. The table shows the summary of the statistical test for the difference in sound intensity across frequencies attributable to each of the predictors: pavement temperature, speed, treatment, and the statistical interactions between temperature and speed, and between treatment and speed. All predictors were statistically significant, including the interactive effects of speed and temperature, and speed and treament.
+
+Pillai's trace is a test statistic used in multivariate analyses. It is based on the eigenvalues associated with each predictor, across all the sound intensity frequencies. A larger value indicates that this predictor explains more of the difference in the response data (the matrix of all the sound intensty levels across frequencies). In order to interpret the statistical significance of this test statistic, we examine the p-value. This represents whether the test statistic is larger than expected by chance; a p-value less than 0.05 is considered statistically significant. 
+
+Frequencies from 63 Hz to 20 kHz were used for this analysis, covering 26 1/3 octave band frequencies. 
 
 ```{r overall summary}
-summary(Feq.man.macro)
+# summary(Feq.man.macro)
 
+# summary(Feq.man.micro)
 
-summary(Feq.man.micro)
+summary(Feq.man.micro2)
+
 ```
-
-
-## Post-hoc ANOVAs by LZFeq Frequency
 
 ```{r manova_post_hoc with LZFeq1}
 LZFeq_l = filter(LZFeq_l, Year != "2019")
@@ -175,39 +186,72 @@ LZFeq_l = filter(LZFeq_l, Year != "2019")
 LZFeq.aov.results = vector()
 LZFeq.aov.stderr = vector()
 frequencies = vector()
+LZFeq.aov.predvals = vector()
 
-for (freq in names(LZFeq_l[16:41])){
-  # freq = names(LZFeq_l[16])
-  an.results = lm(LZFeq_l[[freq]] ~ treatment + pavetemp * speed, data = LZFeq_l)
+# Creating 'standardized' values using predict. This evens out the pavetemp and speed to a uniform comparison
+pt = 90
+sp = 50
+
+pred_frame = expand.grid(treatment = unique(LZFeq_l$treatment),
+                         speed = sp,
+                         pavetemp = pt)
+
+
+for (freq in names(LZFeq_l[18:43])){
+  # freq = names(LZFeq_l[18])
+  an.results = lm(LZFeq_l[[freq]] ~ treatment * speed + pavetemp * speed, data = LZFeq_l)
   
   frequencies = rbind(frequencies, c(as.numeric(substr(freq, 2, nchar(freq)))))
   LZFeq.aov.results = rbind(LZFeq.aov.results, coef(an.results))
   LZFeq.aov.stderr = rbind(LZFeq.aov.stderr, coef(summary(an.results))[,"Std. Error"])
+  
+  # Predict 
+  predict(an.results, pred_frame)
+  
+  
 }
 LZFeq.aov.results = data.frame(LZFeq.aov.results)
-LZFeq.aov.results = cbind(LZFeq.aov.results, frequency = frequencies)
+LZFeq.aov.results = cbind(frequency = frequencies, LZFeq.aov.results)
 
 LZFeq.aov.stderr = data.frame(LZFeq.aov.stderr)
-LZFeq.aov.stderr = cbind(LZFeq.aov.stderr, frequency = frequencies)
+LZFeq.aov.stderr = cbind(frequency = frequencies, LZFeq.aov.stderr)
+
+# Write output to files
+names(LZFeq.aov.results)[grep('Intercept', names(LZFeq.aov.results))] = 'Baseline'
+names(LZFeq.aov.stderr)[grep('Intercept', names(LZFeq.aov.stderr))] = 'Baseline'
+
+write.csv(LZFeq.aov.results, file.path(rootdir, 'LZFeq_ANOVA_Coefficients.csv'), row.names = F)
+write.csv(LZFeq.aov.stderr, file.path(rootdir, 'LZFeq_ANOVA_StdErr.csv'), row.names = F)
+
+
+
 ``` 
 
-## Plotting ANOVA coefficient of change in sound intensity from pre-treatment for LZFeq
+## Post-hoc ANOVAs by LZFeq Frequency
+
+Plotting ANOVA coefficient of change in sound intensity from pre-treatment for LZFeq.
 
 Response variables: treatment, pavement temperature, and speed
 
+Compared with Figure 18 in DEVA_QPP_Report_Nov2106-May-2018_draft2 9-5-8.pdf
+
 ```{r fig.height = 20, fig.width = 15}
+
+y_range = c(-50, 50)
+
 #Set colors for each point for 1/4 in chip seal
 CS_1.4_col = c()
 CS_1.4_col = ifelse(abs(LZFeq.aov.results$treatmentX1.4in.Chip.Seal) > LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal,
        ifelse(LZFeq.aov.results$treatmentX1.4in.Chip.Seal < 0, "blue", "red"),"gray")
 
-#Plot LZFeq 1/4in Chip Seal
+# Plot LZFeq 1/4in Chip Seal.
+# Since now we are including interaction between speed and treatment, also add the coefficient for the treatment at 50 mph
 LZFeq_Chip.Seal.1.4 = ggplot()+
   geom_pointrange(data = LZFeq.aov.results,
                   aes(x = frequency,
-                      y = treatmentX1.4in.Chip.Seal,
-                      ymin = treatmentX1.4in.Chip.Seal - LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal,
-                      ymax =treatmentX1.4in.Chip.Seal + LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal),
+                      y = treatmentX1.4in.Chip.Seal + treatmentX1.4in.Chip.Seal.speed * 50,
+                      ymin = treatmentX1.4in.Chip.Seal + treatmentX1.4in.Chip.Seal.speed * 50 - LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal,
+                      ymax = treatmentX1.4in.Chip.Seal + treatmentX1.4in.Chip.Seal.speed * 50 + LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal),
                   colour = CS_1.4_col,
                   size =1) +
   theme_bw(base_line_size = 1,
@@ -216,8 +260,8 @@ LZFeq_Chip.Seal.1.4 = ggplot()+
   labs(title = "LZFeq ANOVA 1/4in Chip Seal Coefficients", 
        x = "Frequency (Hz)", 
        y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
-  geom_hline(yintercept = 0)+
-  ylim(-12,12)
+  geom_hline(yintercept = 0) +
+  ylim(y_range[1], y_range[2])
 
 #Set colors for each point in 3/8 in chip seal
 CS_3.8_col = c()
@@ -228,9 +272,9 @@ CS_3.8_col = ifelse(abs(LZFeq.aov.results$treatmentX3.8in.Chip.Seal) > LZFeq.aov
 LZFeq_Chip.Seal.3.8 = ggplot()+
   geom_pointrange(data = LZFeq.aov.results, 
                   aes(x = frequency,
-                      y = treatmentX3.8in.Chip.Seal,
-                      ymin = treatmentX3.8in.Chip.Seal - LZFeq.aov.stderr$treatmentX3.8in.Chip.Seal,
-                      ymax =treatmentX3.8in.Chip.Seal + LZFeq.aov.stderr$treatmentX3.8in.Chip.Seal),
+                      y = treatmentX3.8in.Chip.Seal + treatmentX3.8in.Chip.Seal.speed * 50,
+                      ymin = treatmentX3.8in.Chip.Seal + treatmentX3.8in.Chip.Seal.speed * 50 - LZFeq.aov.stderr$treatmentX3.8in.Chip.Seal,
+                      ymax =treatmentX3.8in.Chip.Seal + treatmentX3.8in.Chip.Seal.speed * 50 + LZFeq.aov.stderr$treatmentX3.8in.Chip.Seal),
                   colour = CS_3.8_col,
                   size = 1) +
   theme_bw(base_line_size = 1,
@@ -240,7 +284,7 @@ LZFeq_Chip.Seal.3.8 = ggplot()+
        x = "Frequency (Hz)", 
        y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
-  ylim(-12,12)
+  ylim(y_range[1], y_range[2])
 
 #Set colors for each point in type II microsurfacing
 TII_Micro_col = c()
@@ -251,9 +295,9 @@ TII_Micro_col = ifelse(abs(LZFeq.aov.results$treatmentType.II.Microsurfacing)>LZ
 LZFeq_Microsurfacing.II = ggplot()+
   geom_pointrange(data = LZFeq.aov.results,
                   aes(x = frequency, 
-                  y = treatmentType.II.Microsurfacing,
-                  ymin=treatmentType.II.Microsurfacing - LZFeq.aov.stderr$treatmentType.II.Microsurfacing,
-                  ymax=treatmentType.II.Microsurfacing + LZFeq.aov.stderr$treatmentType.II.Microsurfacing),
+                  y = treatmentType.II.Microsurfacing + treatmentType.II.Microsurfacing.speed * 50,
+                  ymin=treatmentType.II.Microsurfacing + treatmentType.II.Microsurfacing.speed * 50 - LZFeq.aov.stderr$treatmentType.II.Microsurfacing,
+                  ymax=treatmentType.II.Microsurfacing + treatmentType.II.Microsurfacing.speed * 50 + LZFeq.aov.stderr$treatmentType.II.Microsurfacing),
                   colour = TII_Micro_col,
                   size = 1) +
   theme_bw(base_line_size = 1,
@@ -263,7 +307,7 @@ LZFeq_Microsurfacing.II = ggplot()+
        x = "Frequency (Hz)", 
        y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
-  ylim(-12,12)
+  ylim(y_range[1], y_range[2])
 
 #Set colors for each point in type III microsurfacing
 TIII_Micro_col = c()
@@ -274,9 +318,9 @@ TIII_Micro_col = ifelse(abs(LZFeq.aov.results$treatmentType.III.Microsurfacing)>
 LZFeq_Microsurfacing.III = ggplot()+
   geom_pointrange(data = LZFeq.aov.results,
                   aes(x = frequency, 
-                  y = treatmentType.III.Microsurfacing,
-                  ymin=treatmentType.III.Microsurfacing - LZFeq.aov.stderr$treatmentType.III.Microsurfacing,
-                  ymax=treatmentType.III.Microsurfacing + LZFeq.aov.stderr$treatmentType.III.Microsurfacing),
+                  y = treatmentType.III.Microsurfacing + treatmentType.III.Microsurfacing.speed * 50,
+                  ymin=treatmentType.III.Microsurfacing + treatmentType.III.Microsurfacing.speed * 50 - LZFeq.aov.stderr$treatmentType.III.Microsurfacing,
+                  ymax=treatmentType.III.Microsurfacing + treatmentType.III.Microsurfacing.speed * 50 + LZFeq.aov.stderr$treatmentType.III.Microsurfacing),
                   colour = TIII_Micro_col,
                   size = 1) +
   theme_bw(base_line_size = 1,
@@ -286,7 +330,7 @@ LZFeq_Microsurfacing.III = ggplot()+
        x = "Frequency (Hz)", 
        y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
-  ylim(-12,12)
+  ylim(y_range[1], y_range[2])
 
 #Arrange plots in grid
 grid.arrange(LZFeq_Chip.Seal.1.4,LZFeq_Chip.Seal.3.8,LZFeq_Microsurfacing.II, LZFeq_Microsurfacing.III, nrow = 4)
@@ -317,44 +361,6 @@ LZFeq.aov.macro.stderr = cbind(LZFeq.aov.macro.stderr, frequency = frequencies)
 
 ```
 
-## Plotting ANOVA coefficients of sound intensity for LZFeq
-
-Predictors: Macro Treatment type, pavement temperature, speed, and year
-
-```{r fig.height = 10, fig.width = 15}
-#Plot Macro Treatment Type Results LZFeq
-LZFeq_Chip.Seal = ggplot()+
-  geom_pointrange(data = LZFeq.aov.macro.results,
-                  aes(x=frequency,
-                      y = macro_treatmentChip.Seal,
-                      ymin =macro_treatmentChip.Seal - LZFeq.aov.macro.stderr$macro_treatmentChip.Seal,
-                      ymax =macro_treatmentChip.Seal + LZFeq.aov.macro.stderr$macro_treatmentChip.Seal),
-                  size = 1)+
-  theme_bw(base_line_size = 1,
-           base_size = 20)+
-  scale_x_log10()+
-  labs(title = "LZFeq ANOVA Chip Seal Coefficients",
-       x = "Frequency (Hz)",
-       y = "Coefficient of Sound Intensity (dB)")+
-  ylim(-27,75)
-
-LZFeq_Microsurfacing = ggplot()+
-  geom_pointrange(data = LZFeq.aov.macro.results,
-                  aes(x=frequency, 
-                      y = macro_treatmentMicrosurfacing,
-                      ymin =macro_treatmentMicrosurfacing - LZFeq.aov.macro.stderr$macro_treatmentMicrosurfacing,
-                      ymax =macro_treatmentMicrosurfacing + LZFeq.aov.macro.stderr$macro_treatmentMicrosurfacing),
-                  size = 1)+
-  theme_bw(base_line_size = 1,
-           base_size = 20)+
-  scale_x_log10()+
-  labs(title = "LZFeq ANOVA Microsurfacing Coefficients",
-       x = "Frequency (Hz)",
-       y = "Coefficient of Sound Intensity (dB)")+
-  ylim(-27,75)
-
-grid.arrange(LZFeq_Chip.Seal, LZFeq_Microsurfacing, nrow = 2)
-```
 
 # MANOVA Analysis with LZFMax
 
@@ -396,9 +402,12 @@ LZFMax.aov.stderr = cbind(LZFMax.aov.stderr, frequency = frequencies)
 ```
 
 
-## Plotting ANOVA coefficients of change in sound intensity from pretreatment for LZFMax
+## Post-hoc ANOVAs by LZFMax Frequency
+
+Plotting ANOVA coefficients of change in sound intensity from pretreatment for LZFMax
 
 Predictors: Treatment type, pavement temperature, and speed
+
 ```{r fig.height = 20, fig.width = 15}
 
 CS_1.4_col = c()
@@ -517,41 +526,3 @@ LZFMax.aov.macro.stderr = cbind(LZFMax.aov.macro.stderr, frequency = frequencies
 
 ```
 
-## Plotting ANOVA coefficients of sound intensity for LZFMax
-
-Predictors: Macro Treatment type, pavement temperature, speed, and year
-
-```{r fig.height = 10, fig.width = 15}
-#Plot Macro Treatment Type Results LZFMax
-LZFMax_Chip.Seal = ggplot()+
-  geom_pointrange(data = LZFMax.aov.macro.results, 
-                  aes(x=frequency, 
-                      y = macro_treatmentChip.Seal,
-                      ymin =macro_treatmentChip.Seal - LZFMax.aov.macro.stderr$macro_treatmentChip.Seal,
-                      ymax =macro_treatmentChip.Seal + LZFMax.aov.macro.stderr$macro_treatmentChip.Seal),
-                  size = 1)+
-  theme_bw(base_line_size = 1,
-           base_size = 20)+
-  scale_x_log10()+
-  labs(title = "LZFMax ANOVA Chip Seal Coefficients",
-       x = "Frequency (Hz)",
-       y = "Coefficient of Sound Intensity (dB)")+
-  ylim(-25,75)
-
-LZFMax_Microsurfacing = ggplot()+
-  geom_pointrange(data = LZFMax.aov.macro.results, 
-                  aes(x=frequency, 
-                      y = macro_treatmentMicrosurfacing,
-                      ymin =macro_treatmentMicrosurfacing - LZFMax.aov.macro.stderr$macro_treatmentMicrosurfacing,
-                      ymax =macro_treatmentMicrosurfacing + LZFMax.aov.macro.stderr$macro_treatmentMicrosurfacing),
-                  size = 1)+
-  theme_bw(base_line_size = 1,
-           base_size = 20)+
-  scale_x_log10()+
-  labs(title = "LZFMax ANOVA Microsurfacing Coefficients",
-       x = "Frequency (Hz)",
-       y = "Coefficient of Sound Intensity (dB)")+
-  ylim(-25,75)
-
-grid.arrange(LZFMax_Chip.Seal, LZFMax_Microsurfacing, nrow = 2)
-```
