Adding treatment x sound
- Updated text
- Removed macro treatment figures
- Calculating effects as difference from baseline using predicted values at constant pavetemp and speed.

--- a/analysis/Passby_MANOVA_Analyses.Rmd
+++ b/analysis/Passby_MANOVA_Analyses.Rmd
@@ -15,12 +15,8 @@ output:
 
 <!-- 
 TODO possibly:
-
-- Update the treatment names in the table
 - Repeat all for onboard measurements
-- Compare results with original report draft
 - Use 2019 data in addition to 2018
-
 -->
 
 ```{r setup, include=FALSE}
@@ -165,9 +161,9 @@ macro.coeff = coefficients(Feq.man.macro)
 micro.coeff = coefficients(Feq.man.micro2)
 ```
 
-Using MANOVA, we see that there are strong effects of all the predictors on noise values across the frequencies. The table shows the summary of the statistical test for the difference in sound intensity across frequencies attributable to each of the predictors: pavement temperature, speed, treatment, and the statistical interactions between temperature and speed, and between treatment and speed. All predictors were statistically significant, including the interactive effects of speed and temperature, and speed and treament.
+Using MANOVA, we see that there are strong effects of all the predictors on noise values across the frequencies. The table shows the summary of the statistical test for the difference in sound intensity across frequencies attributable to each of the predictors: pavement temperature, speed, treatment, and the statistical interactions between temperature and speed, and between treatment and speed. All predictors were statistically significant, including the interactive effects of speed and temperature, and speed and treatment.
 
-Pillai's trace is a test statistic used in multivariate analyses. It is based on the eigenvalues associated with each predictor, across all the sound intensity frequencies. A larger value indicates that this predictor explains more of the difference in the response data (the matrix of all the sound intensty levels across frequencies). In order to interpret the statistical significance of this test statistic, we examine the p-value. This represents whether the test statistic is larger than expected by chance; a p-value less than 0.05 is considered statistically significant. 
+Pillai's trace is a test statistic used in multivariate analyses. It is based on the eigenvalues associated with each predictor, across all the sound intensity frequencies. A larger value indicates that this predictor explains more of the difference in the response data (the matrix of all the sound intensity levels across frequencies). In order to interpret the statistical significance of this test statistic, we examine the p-value. This represents whether the test statistic is larger than expected by chance; a p-value less than 0.05 is considered statistically significant. 
 
 Frequencies from 63 Hz to 20 kHz were used for this analysis, covering 26 1/3 octave band frequencies. 
 
@@ -187,6 +183,7 @@ LZFeq.aov.results = vector()
 LZFeq.aov.stderr = vector()
 frequencies = vector()
 LZFeq.aov.predvals = vector()
+LZFeq.aov.predse = vector()
 
 # Creating 'standardized' values using predict. This evens out the pavetemp and speed to a uniform comparison
 pt = 90
@@ -206,15 +203,25 @@ for (freq in names(LZFeq_l[18:43])){
   LZFeq.aov.stderr = rbind(LZFeq.aov.stderr, coef(summary(an.results))[,"Std. Error"])
   
   # Predict 
-  predict(an.results, pred_frame)
-  
+  pred = predict(an.results, pred_frame, se.fit = T, interval = 'none')
+  LZFeq.aov.predvals = rbind(LZFeq.aov.predvals, pred$fit)
+  LZFeq.aov.predse = rbind(LZFeq.aov.predse, pred$se.fit)  
   
 }
+
 LZFeq.aov.results = data.frame(LZFeq.aov.results)
 LZFeq.aov.results = cbind(frequency = frequencies, LZFeq.aov.results)
 
 LZFeq.aov.stderr = data.frame(LZFeq.aov.stderr)
 LZFeq.aov.stderr = cbind(frequency = frequencies, LZFeq.aov.stderr)
+
+LZFeq.aov.predvals = data.frame(LZFeq.aov.predvals)
+names(LZFeq.aov.predvals) = pred_frame$treatment
+LZFeq.aov.predvals = cbind(frequency = frequencies, LZFeq.aov.predvals)
+
+LZFeq.aov.predse = data.frame(LZFeq.aov.predse)
+names(LZFeq.aov.predse) = pred_frame$treatment
+LZFeq.aov.predse = cbind(frequency = frequencies, LZFeq.aov.predse)
 
 # Write output to files
 names(LZFeq.aov.results)[grep('Intercept', names(LZFeq.aov.results))] = 'Baseline'
@@ -223,35 +230,46 @@ names(LZFeq.aov.stderr)[grep('Intercept', names(LZFeq.aov.stderr))] = 'Baseline'
 write.csv(LZFeq.aov.results, file.path(rootdir, 'LZFeq_ANOVA_Coefficients.csv'), row.names = F)
 write.csv(LZFeq.aov.stderr, file.path(rootdir, 'LZFeq_ANOVA_StdErr.csv'), row.names = F)
 
-
+write.csv(LZFeq.aov.predvals, file.path(rootdir, 'LZFeq_ANOVA_PredictedVals.csv'), row.names = F)
+write.csv(LZFeq.aov.predse, file.path(rootdir, 'LZFeq_ANOVA_PredictedVals_StdErr.csv'), row.names = F)
 
 ``` 
 
 ## Post-hoc ANOVAs by LZFeq Frequency
 
-Plotting ANOVA coefficient of change in sound intensity from pre-treatment for LZFeq.
+Plotting ANOVA change in sound intensity from pre-treatment for LZFeq.
 
-Response variables: treatment, pavement temperature, and speed
+Response variables: treatment, pavement temperature, and speed, as well as the interactions between treatment and speed, pavement temperature and speed.
 
-Compared with Figure 18 in DEVA_QPP_Report_Nov2106-May-2018_draft2 9-5-8.pdf
+The plots are generated from the output of the statistical models, holding pavement temperature constant at 90 degrees and speed constant at 50 mph. The change in sound intensity is calculated as the difference between the predicted sound intensity at 90 degrees and 50 mph for a particular treatment, compared to the baseline pavement conditions in 2016 in the same conditions. The error bars are the standard errors for predicted sound intensity levels.
 
-```{r fig.height = 20, fig.width = 15}
+The predicted values at these conditions are saved as `LZFeq_ANOVA_PredictedVals.csv` and `LZFeq_ANOVA_PredictedVals_StdErr.csv`
 
-y_range = c(-50, 50)
+Compared with Figure 18 in DEVA_QPP_Report_Nov2106-May-2018_draft2 9-5-8.pdf.
+
+```{r plotting_change_LZFeq, fig.height = 20, fig.width = 15}
+
+y_range = c(-10, 10)
+
+# Use predvals. Subtract from baseline to show difference.
+predvals = LZFeq.aov.predvals
+predse = LZFeq.aov.predse
+
+predvals[,3:6] = predvals[,3:6] - predvals[,2]
 
 #Set colors for each point for 1/4 in chip seal
 CS_1.4_col = c()
-CS_1.4_col = ifelse(abs(LZFeq.aov.results$treatmentX1.4in.Chip.Seal) > LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal,
-       ifelse(LZFeq.aov.results$treatmentX1.4in.Chip.Seal < 0, "blue", "red"),"gray")
+CS_1.4_col = ifelse(abs(predvals$X1.4in.Chip.Seal) > predse$X1.4in.Chip.Seal,
+       ifelse(predvals$X1.4in.Chip.Seal < 0, "blue", "red"),"gray")
 
 # Plot LZFeq 1/4in Chip Seal.
 # Since now we are including interaction between speed and treatment, also add the coefficient for the treatment at 50 mph
 LZFeq_Chip.Seal.1.4 = ggplot()+
-  geom_pointrange(data = LZFeq.aov.results,
+  geom_pointrange(data = predvals,
                   aes(x = frequency,
-                      y = treatmentX1.4in.Chip.Seal + treatmentX1.4in.Chip.Seal.speed * 50,
-                      ymin = treatmentX1.4in.Chip.Seal + treatmentX1.4in.Chip.Seal.speed * 50 - LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal,
-                      ymax = treatmentX1.4in.Chip.Seal + treatmentX1.4in.Chip.Seal.speed * 50 + LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal),
+                      y = X1.4in.Chip.Seal,
+                      ymin = X1.4in.Chip.Seal - predse$X1.4in.Chip.Seal,
+                      ymax = X1.4in.Chip.Seal + predse$X1.4in.Chip.Seal),
                   colour = CS_1.4_col,
                   size =1) +
   theme_bw(base_line_size = 1,
@@ -259,22 +277,22 @@ LZFeq_Chip.Seal.1.4 = ggplot()+
   scale_x_log10()+
   labs(title = "LZFeq ANOVA 1/4in Chip Seal Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
+       y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0) +
   ylim(y_range[1], y_range[2])
 
 #Set colors for each point in 3/8 in chip seal
 CS_3.8_col = c()
-CS_3.8_col = ifelse(abs(LZFeq.aov.results$treatmentX3.8in.Chip.Seal) > LZFeq.aov.stderr$treatmentX3.8in.Chip.Seal,
-       ifelse(LZFeq.aov.results$treatmentX3.8in.Chip.Seal < 0, "blue", "red"),"gray")
+CS_3.8_col = ifelse(abs(predvals$X3.8in.Chip.Seal) > predse$X3.8in.Chip.Seal,
+       ifelse(predvals$X3.8in.Chip.Seal < 0, "blue", "red"),"gray")
 
 #Plot LZFeq 3/8 in chip seal
 LZFeq_Chip.Seal.3.8 = ggplot()+
-  geom_pointrange(data = LZFeq.aov.results, 
+  geom_pointrange(data = predvals, 
                   aes(x = frequency,
-                      y = treatmentX3.8in.Chip.Seal + treatmentX3.8in.Chip.Seal.speed * 50,
-                      ymin = treatmentX3.8in.Chip.Seal + treatmentX3.8in.Chip.Seal.speed * 50 - LZFeq.aov.stderr$treatmentX3.8in.Chip.Seal,
-                      ymax =treatmentX3.8in.Chip.Seal + treatmentX3.8in.Chip.Seal.speed * 50 + LZFeq.aov.stderr$treatmentX3.8in.Chip.Seal),
+                      y = X3.8in.Chip.Seal,
+                      ymin = X3.8in.Chip.Seal - predse$X3.8in.Chip.Seal,
+                      ymax =X3.8in.Chip.Seal + predse$X3.8in.Chip.Seal),
                   colour = CS_3.8_col,
                   size = 1) +
   theme_bw(base_line_size = 1,
@@ -282,22 +300,22 @@ LZFeq_Chip.Seal.3.8 = ggplot()+
   scale_x_log10()+
   labs(title = "LZFeq ANOVA 3/8in Chip Seal Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
+       y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(y_range[1], y_range[2])
 
 #Set colors for each point in type II microsurfacing
 TII_Micro_col = c()
-TII_Micro_col = ifelse(abs(LZFeq.aov.results$treatmentType.II.Microsurfacing)>LZFeq.aov.stderr$treatmentType.II.Microsurfacing,
-       ifelse(LZFeq.aov.results$treatmentType.II.Microsurfacing<0, "blue", "red"),"gray")
+TII_Micro_col = ifelse(abs(predvals$Type.II.Microsurfacing)>predse$Type.II.Microsurfacing,
+       ifelse(predvals$Type.II.Microsurfacing<0, "blue", "red"),"gray")
 
 #Plot LZFeq type II microsurfacing
 LZFeq_Microsurfacing.II = ggplot()+
-  geom_pointrange(data = LZFeq.aov.results,
+  geom_pointrange(data = predvals,
                   aes(x = frequency, 
-                  y = treatmentType.II.Microsurfacing + treatmentType.II.Microsurfacing.speed * 50,
-                  ymin=treatmentType.II.Microsurfacing + treatmentType.II.Microsurfacing.speed * 50 - LZFeq.aov.stderr$treatmentType.II.Microsurfacing,
-                  ymax=treatmentType.II.Microsurfacing + treatmentType.II.Microsurfacing.speed * 50 + LZFeq.aov.stderr$treatmentType.II.Microsurfacing),
+                  y = Type.II.Microsurfacing,
+                  ymin=Type.II.Microsurfacing - predse$Type.II.Microsurfacing,
+                  ymax=Type.II.Microsurfacing + predse$Type.II.Microsurfacing),
                   colour = TII_Micro_col,
                   size = 1) +
   theme_bw(base_line_size = 1,
@@ -305,22 +323,22 @@ LZFeq_Microsurfacing.II = ggplot()+
   scale_x_log10()+
   labs(title = "LZFeq ANOVA Type II Microsurfacing Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
+       y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(y_range[1], y_range[2])
 
 #Set colors for each point in type III microsurfacing
 TIII_Micro_col = c()
-TIII_Micro_col = ifelse(abs(LZFeq.aov.results$treatmentType.III.Microsurfacing)>LZFeq.aov.stderr$treatmentType.III.Microsurfacing,
-       ifelse(LZFeq.aov.results$treatmentType.III.Microsurfacing<0, "blue", "red"),"gray")
+TIII_Micro_col = ifelse(abs(predvals$Type.III.Microsurfacing)>predse$Type.III.Microsurfacing,
+       ifelse(predvals$Type.III.Microsurfacing<0, "blue", "red"),"gray")
 
 #Plot LZFeq Type III microsurfacing
 LZFeq_Microsurfacing.III = ggplot()+
-  geom_pointrange(data = LZFeq.aov.results,
+  geom_pointrange(data = predvals,
                   aes(x = frequency, 
-                  y = treatmentType.III.Microsurfacing + treatmentType.III.Microsurfacing.speed * 50,
-                  ymin=treatmentType.III.Microsurfacing + treatmentType.III.Microsurfacing.speed * 50 - LZFeq.aov.stderr$treatmentType.III.Microsurfacing,
-                  ymax=treatmentType.III.Microsurfacing + treatmentType.III.Microsurfacing.speed * 50 + LZFeq.aov.stderr$treatmentType.III.Microsurfacing),
+                  y = Type.III.Microsurfacing,
+                  ymin=Type.III.Microsurfacing - predse$Type.III.Microsurfacing,
+                  ymax=Type.III.Microsurfacing + predse$Type.III.Microsurfacing),
                   colour = TIII_Micro_col,
                   size = 1) +
   theme_bw(base_line_size = 1,
@@ -328,7 +346,7 @@ LZFeq_Microsurfacing.III = ggplot()+
   scale_x_log10()+
   labs(title = "LZFeq ANOVA Type III Microsurfacing Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
+       y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(y_range[1], y_range[2])
 
@@ -337,68 +355,89 @@ grid.arrange(LZFeq_Chip.Seal.1.4,LZFeq_Chip.Seal.3.8,LZFeq_Microsurfacing.II, LZ
 
 ```
 
-```{r}
-
-#ANOVA Model on Macro Treatment Types LZFeq
-LZFeq_l = filter(LZFeq_l, Year != "2019")
-
-LZFeq.aov.macro.results = vector()
-LZFeq.aov.macro.stderr = vector()
-frequencies = vector()
-
-for (freq in names(LZFMax_l[16:41])){
-  an.results = lm(LZFeq_l[[freq]] ~ -1+macro_treatment + pavetemp * speed+Year, data = LZFeq_l)
-  frequencies = rbind(frequencies, c(as.numeric(substr(freq, 2, nchar(freq)))))
-  LZFeq.aov.macro.results = rbind(LZFeq.aov.macro.results, coef(an.results))
-  LZFeq.aov.macro.stderr = rbind(LZFeq.aov.macro.stderr, coef(summary(an.results))[,"Std. Error"])
-}
-
-LZFeq.aov.macro.results = data.frame(LZFeq.aov.macro.results)
-LZFeq.aov.macro.results = cbind(LZFeq.aov.macro.results, frequency = frequencies)
-
-LZFeq.aov.macro.stderr = data.frame(LZFeq.aov.macro.stderr)
-LZFeq.aov.macro.stderr = cbind(LZFeq.aov.macro.stderr, frequency = frequencies)
-
-```
-
-
 # MANOVA Analysis with LZFMax
 
 ```{r manova with LZFMax_l}
 LZFMax_l = filter(LZFMax_l, Year !="2019")
 
-Feq.man.macro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
-                        X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
-                        X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
-                    macro_treatment + pavetemp*speed + Year, data = LZFMax_l)
-summary(Feq.man.macro)
+# Feq.man.macro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
+#                         X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
+#                         X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
+#                     macro_treatment + pavetemp*speed + Year, data = LZFMax_l)
+# summary(Feq.man.macro)
 
-Feq.man.micro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
+# Feq.man.micro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
+#                         X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
+#                         X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
+#                       treatment + pavetemp * speed, data = LZFMax_l)
+# summary(Feq.man.micro)
+
+Fmax.man.micro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
                         X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
                         X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
-                      treatment + pavetemp * speed, data = LZFMax_l)
-summary(Feq.man.micro)
+                      treatment + pavetemp * speed + treatment:speed, data = LZFMax_l)
+
+micro.coeff = coefficients(Fmax.man.micro)
+
+summary(Fmax.man.micro)
 
 ```
+
 ```{r manova_post_hoc with LZFMax_l}
 LZFMax_l = filter(LZFMax_l, Year != "2019")
 
 LZFMax.aov.results = vector()
 LZFMax.aov.stderr = vector()
 frequencies = vector()
+LZFMax.aov.predvals = vector()
+LZFMax.aov.predse = vector()
 
-for (freq in names(LZFMax_l[16:41])){
-  an.results = lm(LZFMax_l[[freq]] ~ treatment + pavetemp * speed, data = LZFMax_l)
+# Creating 'standardized' values using predict. This evens out the pavetemp and speed to a uniform comparison
+pt = 90
+sp = 50
+
+pred_frame = expand.grid(treatment = unique(LZFeq_l$treatment),
+                         speed = sp,
+                         pavetemp = pt)
+
+for (freq in names(LZFMax_l[18:43])){
+  # freq = names(LZFMax_l[18])
+  an.results = lm(LZFMax_l[[freq]] ~ treatment * speed + pavetemp * speed, data = LZFMax_l)
+  
   frequencies = rbind(frequencies, c(as.numeric(substr(freq, 2, nchar(freq)))))
   LZFMax.aov.results = rbind(LZFMax.aov.results, coef(an.results))
   LZFMax.aov.stderr = rbind(LZFMax.aov.stderr, coef(summary(an.results))[,"Std. Error"])
+  
+  # Predict 
+  pred = predict(an.results, pred_frame, se.fit = T, interval = 'none')
+  LZFMax.aov.predvals = rbind(LZFMax.aov.predvals, pred$fit)
+  LZFMax.aov.predse = rbind(LZFMax.aov.predse, pred$se.fit)  
+  
 }
 
 LZFMax.aov.results = data.frame(LZFMax.aov.results)
-LZFMax.aov.results = cbind(LZFMax.aov.results, frequency = frequencies)
+LZFMax.aov.results = cbind(frequency = frequencies, LZFMax.aov.results)
 
 LZFMax.aov.stderr = data.frame(LZFMax.aov.stderr)
-LZFMax.aov.stderr = cbind(LZFMax.aov.stderr, frequency = frequencies)
+LZFMax.aov.stderr = cbind(frequency = frequencies, LZFMax.aov.stderr)
+
+LZFMax.aov.predvals = data.frame(LZFMax.aov.predvals)
+names(LZFMax.aov.predvals) = pred_frame$treatment
+LZFMax.aov.predvals = cbind(frequency = frequencies, LZFMax.aov.predvals)
+
+LZFMax.aov.predse = data.frame(LZFMax.aov.predse)
+names(LZFMax.aov.predse) = pred_frame$treatment
+LZFMax.aov.predse = cbind(frequency = frequencies, LZFMax.aov.predse)
+
+# Write output to files
+names(LZFMax.aov.results)[grep('Intercept', names(LZFMax.aov.results))] = 'Baseline'
+names(LZFMax.aov.stderr)[grep('Intercept', names(LZFMax.aov.stderr))] = 'Baseline'
+
+write.csv(LZFMax.aov.results, file.path(rootdir, 'LZFMax_ANOVA_Coefficients.csv'), row.names = F)
+write.csv(LZFMax.aov.stderr, file.path(rootdir, 'LZFMax_ANOVA_StdErr.csv'), row.names = F)
+
+write.csv(LZFMax.aov.predvals, file.path(rootdir, 'LZFMax_ANOVA_PredictedVals.csv'), row.names = F)
+write.csv(LZFMax.aov.predse, file.path(rootdir, 'LZFMax_ANOVA_PredictedVals_StdErr.csv'), row.names = F)
 ```
 
 
@@ -406,43 +445,54 @@ LZFMax.aov.stderr = cbind(LZFMax.aov.stderr, frequency = frequencies)
 
 Plotting ANOVA coefficients of change in sound intensity from pretreatment for LZFMax
 
-Predictors: Treatment type, pavement temperature, and speed
+Predictors: Treatment type, pavement temperature, and speed. Treatment x speed and pavement temperature x speed are included as predictors.
 
-```{r fig.height = 20, fig.width = 15}
+```{r plotting_change_LZFMax, fig.height = 20, fig.width = 15}
 
+y_range = c(-12, 10)
+
+# Use predvals. Subtract from baseline to show difference.
+predvals = LZFMax.aov.predvals
+predse = LZFMax.aov.predse
+
+predvals[,3:6] = predvals[,3:6] - predvals[,2]
+
+#Set colors for each point for 1/4 in chip seal
 CS_1.4_col = c()
-CS_1.4_col = ifelse(abs(LZFMax.aov.results$treatmentX1.4in.Chip.Seal)>
-                          LZFMax.aov.stderr$treatmentX1.4in.Chip.Seal,
-       ifelse(LZFMax.aov.results$treatmentX1.4in.Chip.Seal<0, "blue", "red"),"gray")
+CS_1.4_col = ifelse(abs(predvals$X1.4in.Chip.Seal) > predse$X1.4in.Chip.Seal,
+       ifelse(predvals$X1.4in.Chip.Seal < 0, "blue", "red"),"gray")
 
+# Plot LZFMax 1/4in Chip Seal.
+# Since now we are including interaction between speed and treatment, also add the coefficient for the treatment at 50 mph
 LZFMax_Chip.Seal.1.4 = ggplot()+
-  geom_pointrange(data = LZFMax.aov.results, 
-                  aes(x = frequency, 
-                      y = treatmentX1.4in.Chip.Seal,
-                      ymin = treatmentX1.4in.Chip.Seal - LZFMax.aov.stderr$treatmentX1.4in.Chip.Seal,
-                      ymax =treatmentX1.4in.Chip.Seal + LZFMax.aov.stderr$treatmentX1.4in.Chip.Seal),
+  geom_pointrange(data = predvals,
+                  aes(x = frequency,
+                      y = X1.4in.Chip.Seal,
+                      ymin = X1.4in.Chip.Seal - predse$X1.4in.Chip.Seal,
+                      ymax = X1.4in.Chip.Seal + predse$X1.4in.Chip.Seal),
                   colour = CS_1.4_col,
-                  size = 1) +
+                  size =1) +
   theme_bw(base_line_size = 1,
            base_size = 20)+
   scale_x_log10()+
   labs(title = "LZFMax ANOVA 1/4in Chip Seal Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
-  geom_hline(yintercept = 0)+
-  ylim(-12,12)
+       y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
+  geom_hline(yintercept = 0) +
+  ylim(y_range[1], y_range[2])
 
+#Set colors for each point in 3/8 in chip seal
 CS_3.8_col = c()
-CS_3.8_col = ifelse(abs(LZFMax.aov.results$treatmentX3.8in.Chip.Seal)>
-                          LZFMax.aov.stderr$treatmentX3.8in.Chip.Seal,
-       ifelse(LZFMax.aov.results$treatmentX3.8in.Chip.Seal<0, "blue", "red"),"gray")
+CS_3.8_col = ifelse(abs(predvals$X3.8in.Chip.Seal) > predse$X3.8in.Chip.Seal,
+       ifelse(predvals$X3.8in.Chip.Seal < 0, "blue", "red"),"gray")
 
+#Plot LZFMax 3/8 in chip seal
 LZFMax_Chip.Seal.3.8 = ggplot()+
-  geom_pointrange(data = LZFMax.aov.results, 
-                  aes(x = frequency, 
-                      y = treatmentX3.8in.Chip.Seal,
-                      ymin = treatmentX3.8in.Chip.Seal - LZFMax.aov.stderr$treatmentX3.8in.Chip.Seal,
-                      ymax =treatmentX3.8in.Chip.Seal + LZFMax.aov.stderr$treatmentX3.8in.Chip.Seal),
+  geom_pointrange(data = predvals, 
+                  aes(x = frequency,
+                      y = X3.8in.Chip.Seal,
+                      ymin = X3.8in.Chip.Seal - predse$X3.8in.Chip.Seal,
+                      ymax =X3.8in.Chip.Seal + predse$X3.8in.Chip.Seal),
                   colour = CS_3.8_col,
                   size = 1) +
   theme_bw(base_line_size = 1,
@@ -450,21 +500,22 @@ LZFMax_Chip.Seal.3.8 = ggplot()+
   scale_x_log10()+
   labs(title = "LZFMax ANOVA 3/8in Chip Seal Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
+       y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
-  ylim(-12,12)
+  ylim(y_range[1], y_range[2])
 
+#Set colors for each point in type II microsurfacing
 TII_Micro_col = c()
-TII_Micro_col = ifelse(abs(LZFMax.aov.results$treatmentType.II.Microsurfacing)>
-                          LZFMax.aov.stderr$treatmentType.II.Microsurfacing,
-       ifelse(LZFMax.aov.results$treatmentType.II.Microsurfacing<0, "blue", "red"),"gray")
+TII_Micro_col = ifelse(abs(predvals$Type.II.Microsurfacing)>predse$Type.II.Microsurfacing,
+       ifelse(predvals$Type.II.Microsurfacing<0, "blue", "red"),"gray")
 
+#Plot LZFMax type II microsurfacing
 LZFMax_Microsurfacing.II = ggplot()+
-  geom_pointrange(data = LZFMax.aov.results, 
+  geom_pointrange(data = predvals,
                   aes(x = frequency, 
-                      y = treatmentType.II.Microsurfacing,
-                      ymin=treatmentType.II.Microsurfacing - LZFMax.aov.stderr$treatmentType.II.Microsurfacing,
-                      ymax=treatmentType.II.Microsurfacing + LZFMax.aov.stderr$treatmentType.II.Microsurfacing),
+                  y = Type.II.Microsurfacing,
+                  ymin=Type.II.Microsurfacing - predse$Type.II.Microsurfacing,
+                  ymax=Type.II.Microsurfacing + predse$Type.II.Microsurfacing),
                   colour = TII_Micro_col,
                   size = 1) +
   theme_bw(base_line_size = 1,
@@ -472,21 +523,22 @@ LZFMax_Microsurfacing.II = ggplot()+
   scale_x_log10()+
   labs(title = "LZFMax ANOVA Type II Microsurfacing Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
+       y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
-  ylim(-12,12)
+  ylim(y_range[1], y_range[2])
 
+#Set colors for each point in type III microsurfacing
 TIII_Micro_col = c()
-TIII_Micro_col = ifelse(abs(LZFMax.aov.results$treatmentType.III.Microsurfacing)>
-                          LZFMax.aov.stderr$treatmentType.III.Microsurfacing,
-       ifelse(LZFMax.aov.results$treatmentType.III.Microsurfacing<0, "blue", "red"),"gray")
+TIII_Micro_col = ifelse(abs(predvals$Type.III.Microsurfacing)>predse$Type.III.Microsurfacing,
+       ifelse(predvals$Type.III.Microsurfacing<0, "blue", "red"),"gray")
 
+#Plot LZFMax Type III microsurfacing
 LZFMax_Microsurfacing.III = ggplot()+
-  geom_pointrange(data = LZFMax.aov.results, 
+  geom_pointrange(data = predvals,
                   aes(x = frequency, 
-                      y = treatmentType.III.Microsurfacing,
-                      ymin=treatmentType.III.Microsurfacing - LZFMax.aov.stderr$treatmentType.III.Microsurfacing,
-                      ymax=treatmentType.III.Microsurfacing + LZFMax.aov.stderr$treatmentType.III.Microsurfacing),
+                  y = Type.III.Microsurfacing,
+                  ymin=Type.III.Microsurfacing - predse$Type.III.Microsurfacing,
+                  ymax=Type.III.Microsurfacing + predse$Type.III.Microsurfacing),
                   colour = TIII_Micro_col,
                   size = 1) +
   theme_bw(base_line_size = 1,
@@ -494,35 +546,13 @@ LZFMax_Microsurfacing.III = ggplot()+
   scale_x_log10()+
   labs(title = "LZFMax ANOVA Type III Microsurfacing Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficient of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
+       y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
-  ylim(-12,12)
+  ylim(y_range[1], y_range[2])
 
-
+#Arrange plots in grid
 grid.arrange(LZFMax_Chip.Seal.1.4,LZFMax_Chip.Seal.3.8,LZFMax_Microsurfacing.II, LZFMax_Microsurfacing.III, nrow = 4)
 
 ```
 
-```{r fig.height = 20, fig.width = 15}
-#ANOVA Model on Macro Treatment Types LZFMax
-LZFMax_l = filter(LZFMax_l, Year != "2019")
-
-LZFMax.aov.macro.results = vector()
-LZFMax.aov.macro.stderr = vector()
-frequencies = vector()
-
-for (freq in names(LZFMax_l[16:41])){
-  an.results = lm(LZFMax_l[[freq]] ~ -1+macro_treatment + pavetemp * speed+Year, data = LZFMax_l)
-  frequencies = rbind(frequencies, c(as.numeric(substr(freq, 2, nchar(freq)))))
-  LZFMax.aov.macro.results = rbind(LZFMax.aov.macro.results, coef(an.results))
-  LZFMax.aov.macro.stderr = rbind(LZFMax.aov.macro.stderr, coef(summary(an.results))[,"Std. Error"])
-}
-
-LZFMax.aov.macro.results = data.frame(LZFMax.aov.macro.results)
-LZFMax.aov.macro.results = cbind(LZFMax.aov.macro.results, frequency = frequencies)
-
-LZFMax.aov.macro.stderr = data.frame(LZFMax.aov.macro.stderr)
-LZFMax.aov.macro.stderr = cbind(LZFMax.aov.macro.stderr, frequency = frequencies)
-
-```
 
